--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ a
 	line-height: 18px;
 }
 
-#content ul, #content blockquote, pre
+#content ul, #content blockquote, pre, .MathJax_Preview, .MathJax
 {
 	margin-left: 30px;
 	margin-right: 30px;
@@ -86,7 +86,8 @@ a
 #content_area ol.footnotes
 {
   margin-bottom: 18px;
-  list-style-position: inside;
+  /*list-style-position: inside;*/
+  margin-left: 18px;
 }
 
 #bottom_nav
