--- a/style.css
+++ b/style.css
@@ -255,15 +255,17 @@ a
 	text-decoration: none;
 }
 
-#head ul#child_pages
+#head ul.sub-menu
 {
   margin-top: 14px;
   margin-bottom: -19px;
 }
 
-#head ul#child_pages li a
+#head ul#menu-primary ul.sub-menu li.menu-item a
 {
-  font-variant: small-caps;
+	text-transform: none;
+  font-variant: small-caps !important;
+  	font-size: 16px;
 }
 
 #head ul#menu-primary li a
@@ -287,7 +289,7 @@ a
 	border-bottom: 3px solid #BABABA;
 }
 
-#head ul#child_pages li a:hover
+#head ul.sub-menu li a:hover
 {
 	border-bottom: 2px solid #BABABA;
 }
