--- a/style.css
+++ b/style.css
@@ -264,7 +264,7 @@ a
 #head ul#menu-primary ul.sub-menu li.menu-item a
 {
 	text-transform: none;
-  font-variant: small-caps !important;
+  font-variant: small-caps;
   	font-size: 16px;
 }
 
