Custom walker! Thanks to http://pastebin.com/Jk7n20mB

--- a/style.css
+++ b/style.css
@@ -285,7 +285,7 @@ a
 	border-bottom: 3px solid #949494;
 }
 
-#head ul#menu-main-nav ul.sub-menu li.current-menu-item a
+#head ul.sub-menu li.current-menu-item a
 {
 	border-bottom: 2px solid #949494;
 }
